[gd_scene load_steps=5 format=3 uid="uid://dintrqc8yffyi"]

[ext_resource type="Script" path="res://player/player.gd" id="1_bcp6o"]
[ext_resource type="Script" path="res://state_machine/state_machine.gd" id="2_v3h8t"]
[ext_resource type="Script" path="res://player/player_states/player_state_idle.gd" id="3_4r7fi"]
[ext_resource type="Script" path="res://player/player_states/player_state_move.gd" id="4_ms11e"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_bcp6o")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_v3h8t")
initial_state = NodePath("PlayerStateIdle")

[node name="PlayerStateIdle" type="Node" parent="StateMachine"]
script = ExtResource("3_4r7fi")

[node name="PlayerStateMove" type="Node" parent="StateMachine"]
script = ExtResource("4_ms11e")
